syntax = "proto3";
option go_package = "proto/";
package transactions;

service TransactionService {
  rpc Create(CreateTransRequest) returns (CreateTransResponse) {}
  rpc Cancel(CancelTransRequest) returns (CancelTransResponse) {}
}

message CreateTransRequest {
  Transaction transaction = 1;
}
message CreateTransResponse {
  uint32 id = 1;
}
message CancelTransRequest {
  int32 transactionID = 2;
}
message CancelTransResponse {
}

message Transaction {
  uint32 id = 1;
  uint32 item_id = 2;
  uint32 user_id = 3;
  float price = 4;
}